# healthcare-risk-kpi

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  report_schedule.yml
config/: config.yaml
scripts/: export_tableau.py  generate_report.py  run_pipeline.py
src/db/: connection.py  loader.py  schema.sql
src/db/migrations/: 001_init.sql  002_add_risk_scores.sql  003_add_kpi_views.sql
src/features/: claims.py  comorbidities.py  demographics.py  pipeline.py
src/ingestion/: download.py  generate_synthetic.py  loader.py
src/models/: evaluator.py  high_cost.py  los_regression.py  readmission.py
src/reporting/: html_report.py  kpi_builder.py
src/reporting/templates/: weekly_report.html
src/scoring/: batch_scorer.py
src/validation/: report.py  schema.py
tableau/: connection_template.md
tests/: conftest.py  test_db_loader.py  test_features.py  test_ingestion.py  test_kpi_builder.py  test_models.py  test_validation.py
